DE510 - Android layout issue (mobile) fixed. US718 - New HTML for "how much, how often" US755 - Removal of completed questions (cherry picked from commit 00be4a1)

--- a/HTMLTemplates/scss/nav-button.scss
+++ b/HTMLTemplates/scss/nav-button.scss
@@ -4,21 +4,24 @@
 	   clear: both;
 	   @media screen and (max-width: 500px) {padding-left: 0;}
 	   p {
-		   padding-bottom: 0.2em;
+		   padding-bottom: 1em;
 		   clear: both;
 	   }
 	   a {
 		   font-weight: 500;
+		   font-size: 19px;
 		   .ie7 & {
 			   width: auto;
 			   display: block;
 			   padding: .4em 1em;
 		   }
 	   }
-	   li {
-		   margin-top: 1.6em;
-		   &:first-child {
-			   margin-top: 0;
+	   ul {
+		   li {
+			   margin: 1.8em 0 0 0;
+			   &:first-child {
+				   margin: 0;
+			   }
 		   }
 	   }
    }
@@ -31,11 +34,11 @@
 		   color: #fff;
 		   box-shadow: 0 3px 0 #000;
 		   border: 0;
-		   padding: 0.4em 1em 0.25em 1em;
+		   padding: 0.6em .8em 0.45em .8em;
 		   cursor: pointer;
 		   -webkit-appearance: none;
-
-		   margin: .8em .25em 0 0;
+		   display: inline-block;
+		   margin: 0;
 		   background: #006435;
 		   font-weight: 500;
 		   text-decoration: none;
